# code-atlas

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agent-memory/researcher/: MEMORY.md  project_graph_viz.md  project_market_landscape.md  project_tauri_devenv.md  project_testing_strategy.md
.claude/agents/: researcher.md  reviewer.md  verifier.md
.claude/hooks/: auto-format.sh  block-dangerous-commands.sh
.claude/plans/: plan.md  react-flow-elk-research.md  research.md  tauri-v2-technical-research.md
.claude/rules/: conventions.md  immutable.md  stack.md
.claude/skills/complete/: SKILL.md
.claude/skills/milestone/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/verify/: SKILL.md
.plans/: 2026-03-17-tauri-poc-research.md
crates/codeatlas-core/: Cargo.toml
crates/codeatlas-core/src/: error.rs  lib.rs
crates/codeatlas-core/src/config/: mod.rs  schema.rs
crates/codeatlas-core/src/detector/: mod.rs  rust.rs  typescript.rs
crates/codeatlas-core/src/graph/: arch_graph.rs  identity.rs  mod.rs  overlay.rs  query.rs  types.rs
crates/codeatlas-core/src/health/: compatibility.rs  graph_health.rs  mod.rs
crates/codeatlas-core/src/profile/: mod.rs
crates/codeatlas-core/src/scan/: mod.rs  pipeline.rs
crates/codeatlas-core/src/workspace/: cargo.rs  javascript.rs  mod.rs
crates/codeatlas-core/tests/: contract_tests.rs  golden_corpus.rs  snapshot_tests.rs
crates/codeatlas-core/tests/snapshots/: snapshot_tests__rust_unsupported_graph.snap  snapshot_tests__rust_workspace_graph.snap  snapshot_tests__ts_monorepo_graph.snap  snapshot_tests__ts_unsupported_graph.snap
docs/: SYSTEM.md  codex-5.3-resaerch.md  decisions.md  prd.md  product-overview.md  research-implementation.md  research-strategy.md
plans/: prd.md
research/: consolidated-market-and-product.md  consolidated-technical-decisions.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/graph/: EdgeFilterBar.tsx  GraphCanvas.tsx
src/components/panels/: CompatibilityPanel.tsx  DetailPanel.test.tsx  DetailPanel.tsx  EdgeProvenance.tsx  HealthIndicator.tsx  ProfileBadge.tsx
src/constants/: edge-styles.ts
src/fixtures/: demo-graph.ts
src/hooks/: use-layout.ts  use-scan.ts  viewport-ref.ts
src/lib/: utils.ts
src/store/: graph-projection.test.ts  graph-projection.ts  graph-store.test.ts  graph-store.ts  scan-store.test.ts  scan-store.ts
src/types/: config.ts  graph.ts  scan.ts
(+25 files in other folders)
