[package]
name = "codeatlas-core"
description = "Standalone analysis library for Code Atlas — zero Tauri dependency"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
petgraph.workspace = true
serde_yaml.workspace = true
globset.workspace = true
tracing.workspace = true
cargo_metadata.workspace = true
tokio-util.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
rayon.workspace = true
ignore.workspace = true
